add bottom margin for fixed audio player on mobile

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -36,3 +36,9 @@ h1,h2,h3,h4,h5,h6,.site-title{
 	background:#eeeeee;
 	padding:.5em;
 }
+
+@media (max-width: 640px) {
+	body{
+		margin-bottom:6em;
+	}
+}
