--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,20 +9,6 @@ layout: default
   
   
 <section id="nearby-locations">
-    {% if page.previous %}
-        {% assign previous = page.previous %}
-    {% else %}
-        {% assign previous = site.posts[0] %}
-    {% endif %}
-    <div class="left">
-        <a class="equalize" href="{{site.baseurl}}{{previous.url}}" title="Previous Post: {{previous.title}}">
-            <div>
-                <h6> ← {{previous.audio_id}} </h6>
-                <h4> {{previous.title}} </h4>
-            </div>
-        </a>
-    </div>
-
     {% if page.next %}
         {% assign next = page.next %}
     {% else %}
@@ -33,12 +19,28 @@ layout: default
         {% assign last lastPostIndex = site.posts | size | minus: 1 %}
         {% assign next = site.posts[lastPostIndex] %}
     {% endif %}
-    <div class="right">
+    <div class="left">
         <a class="equalize" href="{{site.baseurl}}{{next.url}}" title="next Post: {{next.title}}">
             <div>
-                <h6> {{next.audio_id}} →</h6>
+                <h6>← {{next.audio_id}}</h6>
                 <h4> {{next.title}}</h4>
             </div>
         </a>
     </div>
+
+    {% if page.previous %}
+        {% assign previous = page.previous %}
+    {% else %}
+        {% assign previous = site.posts[0] %}
+    {% endif %}
+    <div class="right">
+        <a class="equalize" href="{{site.baseurl}}{{previous.url}}" title="Previous Post: {{previous.title}}">
+            <div>
+                <h6> {{previous.audio_id}} →</h6>
+                <h4> {{previous.title}} </h4>
+            </div>
+        </a>
+    </div>
+
+
 </section>
