--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,7 +24,8 @@ Ann Arbor, MI 48109 | <a href="https://goo.gl/maps/KdHg6KYgc26XqudMA">Map</a>
 
       <div class="footer-col footer-col-3">
         <p>Visitor Parking ($): <a href="https://goo.gl/maps/GoJC3yiDtYZmcvMo7">Lot NC26</a><br>
-	  DPSS Non-Emergency Line:  (734) 763-1131</p>
+	  DPSS Non-Emergency Line:  (734) 763-1131<br>
+	  <a href="{% link credits.markdown %}">Site credits</a></p>
       </div>
     </div>
 
