--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -32,6 +32,14 @@ h1,h2,h3,h4,h5,h6,.site-title{
 	padding:.5em;
 }
 
+.post-meta{
+	color:rgb(87,87,87);
+}
+
+.footer-col-wrapper,.social-media-list{
+	color:rgb(87,87,87);
+}
+
 #floor1,#floor2,#floor3{
 	padding:.5em;
 }
