--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,13 @@
-<header class="site-header" role="banner">
+<header class="site-header">
 
   <div class="wrapper">
     {%- assign default_paths = site.pages | map: "path" -%}
     {%- assign page_paths = site.header_pages | default: default_paths -%}
-    <img src="/assets/images/robotics-logo.svg") class="logo">
+    {%- assign titles_size = site.pages | map: 'title' | join: '' | size -%}
+    <img src="/assets/images/robotics-logo.svg") class="logo" alt="Michigan Robotics logo">
     <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
 
-    {%- if page_paths -%}
+    {%- if titles_size > 0 -%}
       <nav class="site-nav">
         <input type="checkbox" id="nav-trigger" class="nav-trigger" />
         <label for="nav-trigger">
