--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -1,16 +1,14 @@
-   <link rel="stylesheet" href="/assets/audio-player/shikwasa.min.css">
-   <script src="/assets/audio-player/shikwasa.min.js"></script>
-   
    <!-- Open Graph / Facebook -->
    <meta property="og:type" content="website">
    <meta property="og:url" content="https://audio.robotics.umich.edu/">
    <meta property="og:title" content="Ford Robotics Building Audio Tour">
    <meta property="og:description" content="An audio exploration of the University of Michigan Robotics Department's home.">
-   <meta property="og:image" content="/assets/images/featured.jpg">
+   <meta property="og:image" content="https://audio.robotics.umich.edu/assets/images/featured.jpg">
 
    <!-- Twitter -->
-   <meta property="twitter:card" content="summary_large_image">
-   <meta property="twitter:url" content="https://audio.robotics.umich.edu/">
-   <meta property="twitter:title" content="Ford Robotics Building Audio Tour">
-   <meta property="twitter:description" content="An audio exploration of the University of Michigan Robotics Department's home.">
-   <meta property="twitter:image" content="/assets/images/featured.jpg">
+   <meta name="twitter:card" content="summary_large_image">
+   <meta name="twitter:image" content="https://audio.robotics.umich.edu/assets/images/featured.jpg">
+  
+   <link rel="stylesheet" href="/assets/audio-player/shikwasa.min.css">
+   <script src="/assets/audio-player/shikwasa.min.js"></script>
+   
