--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -1,3 +1,4 @@
    <link rel="stylesheet" href="/assets/audio-player/shikwasa.min.css">
    <script src="/assets/audio-player/shikwasa.min.js"></script>
-   
+   <script data-goatcounter="https://umrobotics.goatcounter.com/count"
+           async src="//gc.zgo.at/count.js"></script>
