--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,7 +9,7 @@ layout: default
 
   {{ content }}
 <h2>Start exploring below.</h2>
-<p>This audio tour covers points of interest in the University of Michigan's Ford Motor Company Robotics Building. If you need help finding a location, consult <a href={% link tour-map.markdown %}>the map</a>.</p>
+<p>This audio tour covers points of interest in the University of Michigan's Ford Motor Company Robotics Building, typically open to visit Monday through Friday, 7am to 7pm. If you need help finding a location, consult <a href={% link tour-map.markdown %}>the map</a>.</p>
   {% if site.paginate %}
     {% assign posts = paginator.posts %}
   {% else %}
