adding message to respect researchers II

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,7 +9,7 @@ layout: default
 
   {{ content }}
 <h2>Start exploring below.</h2>
-<p>This audio tour covers points of interest in the University of Michigan's Ford Motor Company Robotics Building, typically open to visit Monday through Friday, 7am to 7pm. If you need help finding a location, consult <a href={% link tour-map.markdown %}>the map</a>. We kindly request that you respect the focus and concentration of our researchers in the labs during your tour of the building. Your cooperation is greatly appreciated.</p>
+<p>This audio tour covers points of interest in the University of Michigan's Ford Motor Company Robotics Building, typically open to visit Monday through Friday, 7am to 7pm. If you need help finding a location, consult <a href={% link tour-map.markdown %}>the map</a>.</p><p>We kindly request that you respect the focus and concentration of our researchers in the labs during your tour of the building. Your cooperation is greatly appreciated.</p>
   {% if site.paginate %}
     {% assign posts = paginator.posts %}
   {% else %}
